# hackathon-charla-facil

./: .gitignore  README.md  pyproject.toml
charla_facil/: .agent_engine_config.json  .env.example  __init__.py  a2a.py  agent.py  gcp-oauth.keys.example.json  word_rating.py
charla_facil/agents/: safe_web_search_agent.py  word_repetition_agent.py
charla_facil/storage/: db.py  orm_models.py
charla_facil/tools/: practice_words.py  user_info.py
charla_facil/tools/mcp/: google_calendar_mcp.py
tests/tools/: test_practice_words.py  test_user_info.py
